Change classloader and annotation detection